--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node --watch src/server.js"
   },
   "dependencies": {
     "chokidar": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "dotenv": "^16.1.0"
+    "brighterscript": "^0.60.0",
+    "brs": "^0.44.0"
   }
 }
